--- a/index.html
+++ b/index.html
@@ -308,6 +308,16 @@
               </div>
             </a>
           </li>
+          <li>
+            <a href="./pages/Scroll-Trigger/index.html">
+              <img src="cover6.png" alt="animation-cover" />
+
+              <div>
+                <h3>Gsap ScrollTrigger</h3>
+                <p>Learn <code>scrollTrigger()</code></p>
+              </div>
+            </a>
+          </li>
         </ul>
       </section>
     </main>
