--- a/pages/Scroll-Trigger/index.html
+++ b/pages/Scroll-Trigger/index.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../style.css" />
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
+    <section class="spacer">Scroll down to see the animation</section>
+    <div class="box"></div>
+    <section class="spacer">
+      Box moves when start hits the starter-marker
+    </section>
     <script type="module" src="script,.js"></script>
   </body>
 </html>
