--- a/index.html
+++ b/index.html
@@ -314,7 +314,17 @@
 
               <div>
                 <h3>Gsap ScrollTrigger</h3>
-                <p>Learn <code>scrollTrigger()</code></p>
+                <p>Learn <code>scrollTrigger:{}</code></p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="./pages/Scroll-Trigger-Pinning/">
+              <img src="cover7.png" alt="animation-cover" />
+
+              <div>
+                <h3>Gsap ScrollTrigger Pinning</h3>
+                <p>Learn <code>scrollTrigger:{}</code></p>
               </div>
             </a>
           </li>
